--- a/app/src/main/res/layout/fragment_setting_cs.xml
+++ b/app/src/main/res/layout/fragment_setting_cs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
+              android:background="#efefef"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -14,23 +15,41 @@
       android:orientation="vertical">
 
       <LinearLayout
+        android:id="@+id/ll_fl_container"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="43dp"
         android:background="#efefef">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:layout_marginTop="18dp"
+          android:text="문의"
+          android:textSize="14sp"
+          android:textColor="#6d6d6d"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_cs_using"
-        android:layout_below="@id/ll_fl_container"
         android:layout_width="match_parent"
+        android:background="@color/colorWhite"
         android:layout_height="53dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="사용문의"
           android:textColor="#333333"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
           android:layout_width="wrap_content"
@@ -55,28 +74,22 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar"
-        android:layout_below="@+id/fl_setting_cs_using"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_cs_ad"
-        android:layout_below="@id/ll_bar"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="광고문의"
           android:textColor="#333333"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
           android:layout_width="wrap_content"
@@ -100,27 +113,44 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_fl_container2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
+
+      <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#efefef"
-        android:layout_below="@+id/fl_setting_cs_ad"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="43dp"
+        android:background="#efefef">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:layout_marginTop="18dp"
+          android:text="약관"
+          android:textSize="14sp"
+          android:textColor="#6d6d6d"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_cs_service"
-        android:layout_below="@+id/ll_fl_container2"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="서비스 이용약관"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -148,27 +178,21 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar5"
-        android:layout_below="@+id/fl_setting_cs_service"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_cs_user"
-        android:layout_below="@+id/ll_bar5"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="개인정보 취급방침"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -196,15 +220,9 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar3"
-        android:layout_below="@+id/fl_setting_cs_user"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_gps"
@@ -213,10 +231,11 @@
         android:layout_height="53dp"
         android:background="@color/colorWhite">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="위치기반 서비스 이용약관"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -244,61 +263,32 @@
       </FrameLayout>
 
       <LinearLayout
-        android:id="@+id/ll_bar4"
-        android:layout_below="@+id/fl_setting_gps"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-      </LinearLayout>
-
-      <FrameLayout
-        android:id="@+id/fl_setting_cs_open"
-        android:layout_below="@+id/ll_bar4"
-        android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:background="@color/colorWhite">
-
-        <TextView
-          android:layout_marginLeft="16dp"
-          android:text="오픈소스 라이브러리"
-          android:textSize="16sp"
-          android:textColor="#333333"
-          android:layout_centerVertical="true"
-          android:layout_gravity="center_vertical|left"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_setting_cs_open"/>
-
-        <ImageView
-          android:layout_marginRight="16dp"
-          android:layout_width="12.5dp"
-          android:layout_height="21dp"
-          android:src="@drawable/back_chevron_copy"
-          android:id="@+id/iv_setting_cs_open"
-          android:layout_gravity="center_vertical|right"
-          android:layout_centerVertical="true"
-          android:layout_alignParentRight="true"
-          android:layout_alignParentEnd="true"/>
-
-        <Button
-          android:background="@null"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@+id/btn_setting_cs_open"
-          android:layout_weight="1"/>
-      </FrameLayout>
+        android:background="#dadada"/>
 
       <LinearLayout
-        android:id="@+id/ll_fl_container3"
-        android:layout_below="@+id/fl_setting_cs_open"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="43dp"
         android:background="#efefef">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:layout_marginLeft="16dp"
+          android:layout_marginTop="18dp"
+          android:text="기타"
+          android:textSize="14sp"
+          android:textColor="#6d6d6d"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"/>
+
       </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
       <FrameLayout
         android:id="@+id/fl_setting_cs_leave"
@@ -306,11 +296,13 @@
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:background="@color/colorWhite">
-        <TextView
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="회원탈퇴"
           android:textColor="#333333"
-          android:textSize="16sp"
+          android:textSize="15sp"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
           android:layout_width="wrap_content"
@@ -337,11 +329,9 @@
       </FrameLayout>
 
       <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#efefef">
-      </LinearLayout>
+        android:layout_height="1dp"
+        android:background="#dadada"/>
 
     </LinearLayout>
 
