--- a/app/src/main/res/layout/fragment_setting_cs_terms.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_terms.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
+              android:background="@color/colorWhite"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <TextView
+  <com.puzi.puzi.ui.customview.NotoTextView
+    android:text="서비스이용 약관
+
+이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다.이용약관 내용입니다."
+    app:fontWeight="regular"
+    android:textColor="#333333"
+    android:textSize="16sp"
+    android:layout_margin="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
 
