--- a/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
@@ -10,7 +10,8 @@
     android:layout_width="match_parent"
     android:layout_height="53.3dp">
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:layout_marginLeft="16dp"
       android:textColor="#333333"
       android:textSize="16sp"
