--- a/app/src/main/res/layout/fragment_setting_cs_ask.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_ask.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -22,16 +22,18 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
           android:textSize="16sp"
-          android:textColor="@color/colorBlack"
+          android:textColor="#333333"
           android:text="문의 유형"
           android:gravity="left" />
 
         <Spinner
+          android:background="@drawable/button_store_withdraw_input"
           android:id="@+id/sp_ask_type"
           android:prompt="@string/ask_type"
           android:layout_width="match_parent"
@@ -49,21 +51,24 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
           android:textSize="16sp"
-          android:textColor="@color/colorBlack"
+          android:textColor="#333333"
           android:text="이메일"
           android:gravity="left" />
 
-        <EditText
+        <com.puzi.puzi.ui.customview.NotoEditText
+          app:fontWeight="regular"
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
-          android:layout_height="64dp"
+          android:layout_height="54dp"
           android:textSize="15sp"
           android:id="@+id/edt_cs_user_email"
+          android:textColor="#6D6D6D"
           android:textColorHint="#6D6D6D"
           android:hint="답변 받을 이메일 주소를 입력하세요."
           android:ems="15"
@@ -83,7 +88,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
@@ -92,13 +98,15 @@
           android:text="제목"
           android:gravity="left" />
 
-        <EditText
+        <com.puzi.puzi.ui.customview.NotoEditText
+          app:fontWeight="regular"
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
-          android:layout_height="64dp"
+          android:layout_height="54dp"
           android:textSize="15sp"
           android:id="@+id/edt_cs_user_title"
           android:hint="제목을 입력하세요."
+          android:textColor="#6D6D6D"
           android:textColorHint="#6D6D6D"
           android:maxLength="15"
           android:maxLines="1"
@@ -116,7 +124,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="8dp"
@@ -125,7 +134,8 @@
           android:text="내용"
           android:gravity="left" />
 
-        <EditText
+        <com.puzi.puzi.ui.customview.NotoEditText
+          app:fontWeight="regular"
           android:background="@drawable/edittext"
           android:layout_width="match_parent"
           android:layout_height="320dp"
@@ -133,6 +143,7 @@
           android:id="@+id/edt_cs_user_content"
           android:hint="내용을 입력하세요."
           android:gravity="top"
+          android:textColor="#6D6D6D"
           android:textColorHint="#6D6D6D"
           android:paddingBottom="15dp"
           android:paddingTop="15dp"
@@ -150,11 +161,12 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="54dp"
           android:id="@+id/btn_ask"
-          android:background="@drawable/button_search"
+          android:background="@drawable/button_puzi"
           android:textSize="16sp"
           android:text="문의하기"
           android:textColor="@color/colorWhite"/>
