--- a/app/src/main/res/layout/fragment_setting_notice_item_child.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_item_child.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
   <LinearLayout
+    android:background="#fafafa"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
     android:paddingLeft="14dp"
@@ -12,7 +13,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="regular"
       android:textSize="16sp"
       android:textColor="#6d6d6d"
       android:lineSpacingExtra="8sp"
