--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -22,7 +22,8 @@
       <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="45dp">
+        android:background="@color/colorWhite"
+        android:layout_height="53dp">
 
         <ImageButton
           android:paddingRight="17dp"
@@ -44,7 +45,7 @@
           app:sriv_right_bottom_corner_radius="14.5dp"
           app:sriv_border_color="#979797"
           app:sriv_border_width="0.5dp"
-          android:layout_marginTop="8dp"
+          android:layout_gravity="center_vertical"
           android:layout_marginRight="14dp"
           android:layout_width="29dp"
           android:layout_height="29dp"
@@ -63,6 +64,10 @@
           android:id="@+id/tv_channel_detail_company_name"/>
 
       </LinearLayout>
+
+      <LinearLayout
+        android:background="#dadada"
+        android:layout_width="match_parent" android:layout_height="1dp"/>
 
       <!-- 광고이미지 -->
       <ImageButton
@@ -286,7 +291,7 @@
         android:paddingBottom="13dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
         android:background="@drawable/channel_detail_inputbox"
         android:textSize="16sp"
