--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -44,6 +44,7 @@
         android:layout_marginTop="10dp"/>
 
       <LinearLayout
+        android:id="@+id/ll_bar"
         android:background="#80eeeeee"
         android:layout_width="match_parent"
         android:layout_height="1dp"
