--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -15,16 +15,21 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 
-    <LinearLayout
-      android:layout_gravity="center"
+    <ImageView
+      android:layout_marginTop="105dp"
+      android:src="@drawable/splash_logo"
+      android:layout_gravity="center|top"
       android:layout_width="157dp"
-      android:layout_height="279dp">
-      <ImageView
-        android:src="@drawable/splash_logo"
-        android:layout_gravity="center|top"
-        android:layout_width="157dp"
-        android:layout_height="135dp"/>
-    </LinearLayout>
+      android:layout_height="wrap_content"/>
+
+    <ProgressBar
+      android:visibility="invisible"
+      style="?android:attr/progressBarStyleSmall"
+      android:layout_marginBottom="150dp"
+      android:layout_width="30dp"
+      android:layout_height="30dp"
+      android:layout_gravity="bottom|center"
+      android:id="@+id/splash_progress_Bar"/>
 
     <ImageView
       android:src="@drawable/text"
