--- a/app/src/main/res/layout/activity_store_item.xml
+++ b/app/src/main/res/layout/activity_store_item.xml
@@ -71,6 +71,7 @@
   </LinearLayout>
 
   <GridView
+    android:listSelector="@android:color/transparent"
     android:id="@+id/gv_store_item"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
