--- a/app/src/main/res/layout/item_store_brand_group.xml
+++ b/app/src/main/res/layout/item_store_brand_group.xml
@@ -17,6 +17,7 @@
     android:id="@+id/tv_store_brand_group_title"/>
 
   <GridView
+    android:listSelector="@android:color/transparent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:numColumns="4"
