--- a/app/src/main/res/layout/activity_editors_page_webview.xml
+++ b/app/src/main/res/layout/activity_editors_page_webview.xml
@@ -42,9 +42,11 @@
     </LinearLayout>
 
     <LinearLayout
+      android:orientation="vertical"
       android:id="@+id/ll_channel_editors_page_top_line"
       android:background="#dadada"
-      android:layout_width="match_parent" android:layout_height="1dp"/>
+      android:layout_width="match_parent"
+      android:layout_height="1dp"/>
 
     <FrameLayout
       android:layout_weight="1"
