--- a/app/src/main/res/layout/activity_store_coupon.xml
+++ b/app/src/main/res/layout/activity_store_coupon.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -19,9 +19,11 @@
       android:src="@drawable/back"
       android:id="@+id/ibtn_back_point"/>
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:text="쿠폰함"
-      android:textSize="15sp"
+      android:textColor="#333333"
+      android:textSize="20sp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -29,17 +31,90 @@
 
   </FrameLayout>
   
-  <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+  <ScrollView
+    android:id="@+id/sv_coupon"
+    android:layout_width="match_parent" 
+    android:layout_height="wrap_content">
 
-    <ListView
-      android:id="@+id/lv_coupon"
+    <LinearLayout
+      android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:divider="@color/colorWhite"
-      android:background="@color/colorWhite"
-      android:dividerHeight="10dp"/>
+      android:layout_height="match_parent">
 
-  </LinearLayout>
+      <LinearLayout
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="19dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="24dp">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:id="@+id/tv_coupon_header"
+          android:text="미사용 쿠폰"
+          android:textSize="16sp"
+          android:textColor="#333333"
+          android:layout_width="wrap_content"
+          android:layout_height="24dp"/>
+
+        <TextView
+          android:id="@+id/tv_coupon_num"
+          android:layout_marginLeft="3dp"
+          android:textSize="16sp"
+          android:textColor="#f13d3a"
+          android:layout_width="wrap_content"
+          android:layout_height="24dp"/>
+
+      </LinearLayout>
+
+      <ListView
+        android:id="@+id/lv_coupon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/colorWhite"
+        android:background="@color/colorWhite"
+        android:dividerHeight="10dp"/>
+
+      <LinearLayout
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="19dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="24dp">
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:id="@+id/tv_used_coupon_header"
+          android:text="사용 완료 쿠폰"
+          android:textSize="16sp"
+          android:textColor="#333333"
+          android:layout_width="wrap_content"
+          android:layout_height="24dp"/>
+
+        <TextView
+          android:id="@+id/tv_used_coupon_num"
+          android:layout_marginLeft="3dp"
+          android:textSize="16sp"
+          android:textColor="#f13d3a"
+          android:layout_width="wrap_content"
+          android:layout_height="24dp"/>
+
+      </LinearLayout>
+
+      <ListView
+        android:id="@+id/lv_used_coupon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@color/colorWhite"
+        android:background="@color/colorWhite"
+        android:dividerHeight="10dp"/>
+
+    </LinearLayout>
+    
+  </ScrollView>
+  
 </LinearLayout>
