--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -29,7 +29,8 @@
           android:background="@null"
           android:src="@drawable/back"
           android:id="@+id/ibtn_back"/>
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:text="회원가입"
           android:textColor="@color/colorBlack"
           android:textSize="20sp"
@@ -54,11 +55,12 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="left"
-          android:textSize="15sp"
+          android:textSize="16sp"
           android:textColor="@color/colorBlack"
           android:text="성별"/>
 
@@ -66,8 +68,6 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="9dp"
-          android:layout_marginLeft="48dp"
-          android:layout_marginRight="48dp"
           android:layout_gravity="center_vertical"
           android:orientation="horizontal"
           android:id="@+id/rg_gender">
@@ -78,9 +78,10 @@
             android:textSize="16sp"
             android:textColor="#6D6D6D"
             android:layout_gravity="left"
-            android:layout_width="77dp"
-            android:layout_height="40dp"
-            android:paddingLeft="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:paddingLeft="12dp"
+            android:layout_marginRight="52dp"
             android:id="@+id/rbtn_male"
             android:checked="true"
             android:layout_weight="1"/>
@@ -91,9 +92,9 @@
             android:textSize="16sp"
             android:textColor="#6D6D6D"
             android:layout_gravity="right"
-            android:layout_width="77dp"
-            android:layout_height="40dp"
-            android:paddingLeft="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:paddingLeft="12dp"
             android:id="@+id/rbtn_female"
             android:layout_weight="1"/>
 
@@ -110,7 +111,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:gravity="left"
@@ -136,7 +138,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:gravity="left"
@@ -144,98 +147,148 @@
           android:textColor="@color/colorBlack"
           android:text="관심분야"/>
 
-        <GridLayout
+        <LinearLayout
+          android:layout_marginTop="8dp"
+          android:orientation="vertical"
           android:layout_width="match_parent"
-          android:layout_height="295dp"
-          android:id="@+id/gl_favorites"
-          android:layout_gravity="center"
-          android:columnCount="2"
-          android:layout_marginTop="8dp">
+          android:layout_height="wrap_content"
+          android:id="@+id/gl_favorites">
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_beauty"
-            android:text="뷰티"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+          <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginBottom="15dp">
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_shopping"
-            android:text="쇼핑"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_beauty"
+              android:text="뷰티"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_game"
-            android:text="게임"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_shopping"
+              android:text="쇼핑"
+              android:textSize="16sp"
+              android:layout_weight="1"
+              android:textColor="@color/colorTextGray"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_eat"
-            android:text="외식"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+          </LinearLayout>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_tour"
-            android:text="여행\n(항공,호텔)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="15dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+          <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginBottom="15dp">
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_finance"
-            android:text="금융(보험,제테크)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_marginLeft="8dp"
-            android:layout_width="140dp"
-            android:layout_height="60dp"/>
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_game"
+              android:text="게임"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
-          <Button
-            android:background="@drawable/button_favorite_off"
-            android:id="@+id/btn_info_culture"
-            android:text="문화\n(콘서트,공연)"
-            android:textSize="16sp"
-            android:textColor="@color/colorTextGray"
-            android:layout_width="140dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="15dp"/>
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_eat"
+              android:text="외식"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
 
-        </GridLayout>
+          </LinearLayout>
 
-        <TextView
+          <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginBottom="15dp">
+
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_tour"
+              android:text="여행\n(항공,호텔)"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
+
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_finance"
+              android:text="금융(보험,제테크)"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
+
+          </LinearLayout>
+
+          <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="54dp">
+
+            <com.puzi.puzi.ui.customview.NotoButton
+              app:fontWeight="regular"
+              android:background="@drawable/button_favorite_off"
+              android:id="@+id/btn_info_culture"
+              android:text="문화\n(콘서트,공연)"
+              android:textSize="16sp"
+              android:textColor="@color/colorTextGray"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
+
+            <com.puzi.puzi.ui.customview.NotoButton
+              android:visibility="invisible"
+              android:layout_weight="1"
+              android:layout_marginRight="16dp"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:layout_marginTop="13dp"
+          android:layout_marginTop="9dp"
           android:textSize="12sp"
           android:text="3개 이상 선택해주세요"
-          android:gravity="left" android:id="@+id/textView5"/>
+          android:gravity="left"/>
 
       </LinearLayout>
 
@@ -248,7 +301,8 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp">
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:layout_marginBottom="5dp"
@@ -257,10 +311,11 @@
           android:textColor="@color/colorBlack"
           android:text="추천 아이디 (선택)"/>
 
-        <EditText
+        <com.puzi.puzi.ui.customview.NotoEditText
+          app:fontWeight="regular"
           android:layout_width="match_parent"
-          android:layout_height="64dp"
-          android:textSize="15sp"
+          android:layout_height="54dp"
+          android:textSize="16sp"
           android:maxLines="1"
           android:id="@+id/edit_recommend"
           android:hint="추천인 아이디를 입력해주세요"
@@ -289,12 +344,13 @@
           android:layout_height="54dp"
           android:layout_marginBottom="5dp">
 
-          <TextView
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="medium"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="left|center_vertical"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/colorBlack"
             android:text="약관동의"/>
 
@@ -305,7 +361,8 @@
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
-          <Button
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
             android:text="@string/confirm_service"
             android:textSize="16sp"
             android:textColor="#6D6D6D"
@@ -316,7 +373,8 @@
             android:layout_marginBottom="12dp"
             android:layout_weight="1"
             android:background="@null"/>
-          <Button
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
             android:text="@string/confirm_personal"
             android:textSize="16sp"
             android:textColor="#6D6D6D"
@@ -327,7 +385,8 @@
             android:id="@+id/btn_signup_personal"
             android:layout_weight="1"
             android:background="@null"/>
-          <Button
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="regular"
             android:text="@string/confirm_gps"
             android:textSize="16sp"
             android:textColor="#6D6D6D"
