--- a/app/src/main/res/layout/item_coupon_child.xml
+++ b/app/src/main/res/layout/item_coupon_child.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:padding="0dp"
               android:layout_margin="0dp"
@@ -45,10 +45,11 @@
           android:layout_width="match_parent"
           android:layout_height="104dp"
           android:scaleType="centerCrop"
-          android:id="@+id/ibtn_coupon_1"
+          android:id="@+id/iv_coupon_1"
           android:background="#00000000"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="title"
           android:textSize="16sp"
           android:textColor="#333333"
@@ -61,7 +62,7 @@
           android:gravity="left"
           android:id="@+id/tv_coupon_title_1"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.RobotoTextView
           android:text="title"
           android:textSize="20sp"
           android:textColor="#333333"
@@ -75,7 +76,7 @@
 
       </LinearLayout>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.RobotoTextView
         android:id="@+id/tv_coupon_date_1"
         android:layout_gravity="center"
         android:textSize="12sp"
