--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -81,6 +81,7 @@
       android:textSize="13.5sp"/>
 
     <com.puzi.puzi.ui.customview.NotoButton
+      app:fontWeight="bold"
       android:id="@+id/login_btn"
       android:layout_width="match_parent"
       android:layout_height="54dp"
