--- a/app/src/main/res/layout/item_coupon_used_child.xml
+++ b/app/src/main/res/layout/item_coupon_used_child.xml
@@ -1,196 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:padding="0dp"
               android:layout_margin="0dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <LinearLayout
-    android:orientation="horizontal"
-    android:padding="0dp"
-    android:layout_marginTop="9dp"
-    android:layout_marginBottom="9dp"
+  <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="208dp">
 
     <LinearLayout
-      android:layout_weight="1"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"/>
-
-    <LinearLayout
+      android:layout_margin="8dp"
       android:orientation="vertical"
-      android:layout_width="156dp"
-      android:layout_height="222dp">
+      android:layout_width="match_parent"
+      android:layout_height="200dp">
 
-      <LinearLayout
-        android:background="@drawable/coupon_line_used"
-        android:paddingTop="9dp"
-        android:paddingLeft="9dp"
-        android:paddingRight="9dp"
-        android:paddingBottom="12dp"
-        android:orientation="vertical"
-        android:layout_width="156dp"
-        android:layout_height="200dp">
+      <ImageView
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="4dp"
+        android:scaleType="fitCenter"
+        android:layout_width="match_parent"
+        android:layout_height="104dp"
+        android:src="@mipmap/home"
+        android:id="@+id/iv_used_coupon"/>
 
-        <FrameLayout
-          android:layout_width="match_parent"
-          android:layout_height="104dp">
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
+        android:text="itemName"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
+        android:textSize="16sp"
+        android:textColor="#333333"
+        android:id="@+id/tv_used_coupon_name"/>
 
-          <com.joooonho.SelectableRoundedImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:sriv_right_top_corner_radius="5dp"
-            app:sriv_right_bottom_corner_radius="5dp"
-            app:sriv_left_top_corner_radius="5dp"
-            app:sriv_left_bottom_corner_radius="5dp"
-            app:sriv_oval="false"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/ibtn_coupon_1"
-            android:background="#00000000"/>
-
-          <ImageView
-            android:id="@+id/iv_coupon_used_1"
-            android:src="@drawable/conrirm_icon"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_gravity="right"
-            android:layout_width="48dp"
-            android:layout_height="48dp"/>
-
-        </FrameLayout>
-
-        <TextView
-          android:text="title"
-          android:textSize="16sp"
-          android:textColor="#333333"
-          android:layout_marginTop="4dp"
-          android:typeface="sans"
-          android:maxLines="2"
-          android:ellipsize="end"
-          android:layout_width="match_parent"
-          android:layout_height="48dp"
-          android:gravity="left"
-          android:id="@+id/tv_coupon_title_1"/>
-
-        <TextView
-          android:text="title"
-          android:textSize="20sp"
-          android:textColor="#333333"
-          android:typeface="sans"
-          android:maxLines="1"
-          android:ellipsize="end"
-          android:layout_width="match_parent"
-          android:layout_height="24dp"
-          android:gravity="right"
-          android:id="@+id/tv_coupon_price_1"/>
-
-      </LinearLayout>
-
-      <TextView
-        android:id="@+id/tv_coupon_date_1"
-        android:layout_gravity="center"
-        android:textSize="12sp"
-        android:textColor="#6d6d6d"
-        android:layout_marginTop="8dp"
+      <com.puzi.puzi.ui.customview.RobotoTextView
+        android:text="price"
         android:layout_width="wrap_content"
-        android:layout_height="22dp"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"
+        android:textStyle="normal"
+        android:textColor="#333333"
+        android:id="@+id/tv_used_coupon_price"/>
 
     </LinearLayout>
 
     <LinearLayout
-      android:layout_width="16dp"
-      android:layout_height="match_parent"/>
-
-    <LinearLayout
+      android:background="@drawable/coupon_line_used"
       android:orientation="vertical"
-      android:layout_width="156dp"
-      android:layout_height="222dp">
+      android:layout_margin="8dp"
+      android:layout_width="match_parent"
+      android:layout_height="200dp">
 
-      <LinearLayout
-        android:background="@drawable/coupon_line_used"
-        android:paddingTop="9dp"
-        android:paddingLeft="9dp"
-        android:paddingRight="9dp"
-        android:paddingBottom="12dp"
-        android:orientation="vertical"
-        android:layout_width="156dp"
-        android:layout_height="200dp">
-
-        <FrameLayout
-          android:layout_width="match_parent"
-          android:layout_height="104dp">
-
-          <com.joooonho.SelectableRoundedImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:sriv_right_top_corner_radius="5dp"
-            app:sriv_right_bottom_corner_radius="5dp"
-            app:sriv_left_top_corner_radius="5dp"
-            app:sriv_left_bottom_corner_radius="5dp"
-            app:sriv_oval="false"
-            android:layout_width="match_parent"
-            android:layout_height="104dp"
-            android:scaleType="centerCrop"
-            android:id="@+id/ibtn_coupon_2"
-            android:background="#00000000"/>
-
-          <ImageView
-            android:id="@+id/iv_coupon_used_2"
-            android:src="@drawable/conrirm_icon"
-            android:layout_marginTop="1dp"
-            android:layout_marginRight="1dp"
-            android:layout_gravity="right"
-            android:layout_width="48dp"
-            android:layout_height="48dp"/>
-
-        </FrameLayout>
-
-        <TextView
-          android:text="title"
-          android:textSize="16sp"
-          android:textColor="#333333"
-          android:layout_marginTop="4dp"
-          android:typeface="sans"
-          android:maxLines="2"
-          android:ellipsize="end"
-          android:layout_width="match_parent"
-          android:layout_height="48dp"
-          android:gravity="left"
-          android:id="@+id/tv_coupon_title_2"/>
-
-        <TextView
-          android:text="title"
-          android:textSize="20sp"
-          android:textColor="#333333"
-          android:typeface="sans"
-          android:maxLines="1"
-          android:ellipsize="end"
-          android:layout_width="match_parent"
-          android:layout_height="24dp"
-          android:gravity="right"
-          android:id="@+id/tv_coupon_price_2"/>
-
-      </LinearLayout>
-
-      <TextView
-        android:id="@+id/tv_coupon_date_2"
-        android:layout_gravity="center"
-        android:textSize="12sp"
-        android:textColor="#6d6d6d"
-        android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="22dp"/>
-
+      <ImageView
+        android:layout_marginTop="9dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="4dp"
+        android:id="@+id/iv_used_coupon_check"
+        android:src="@drawable/conrirm_icon"
+        android:layout_gravity="right"
+        android:layout_width="48dp"
+        android:layout_height="48dp"/>
     </LinearLayout>
 
-    <LinearLayout
-      android:layout_weight="1"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"/>
+  </FrameLayout>
 
-  </LinearLayout>
+  <com.puzi.puzi.ui.customview.RobotoTextView
+    android:id="@+id/tv_used_coupon_date"
+    android:layout_gravity="center"
+    android:textSize="12sp"
+    android:textColor="#6d6d6d"
+    android:layout_marginTop="8dp"
+    android:layout_width="wrap_content"
+    android:layout_height="22dp"/>
 
 </LinearLayout>
