--- a/app/src/main/res/layout/activity_store_coupon.xml
+++ b/app/src/main/res/layout/activity_store_coupon.xml
@@ -52,7 +52,7 @@
         android:layout_height="24dp">
 
         <com.puzi.puzi.ui.customview.NotoTextView
-          app:fontWeight="medium"
+          app:fontWeight="regular"
           android:id="@+id/tv_coupon_header"
           android:text="미사용 쿠폰"
           android:textSize="16sp"
@@ -92,7 +92,7 @@
         android:layout_height="24dp">
 
         <com.puzi.puzi.ui.customview.NotoTextView
-          app:fontWeight="medium"
+          app:fontWeight="regular"
           android:id="@+id/tv_used_coupon_header"
           android:text="사용 완료 쿠폰"
           android:textSize="16sp"
